data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1319.wast
;; 10. **Test: Improper Mismatched `end` Label**:    - **Description**: Create an `if` block concluding with a `br` instruction targeting a scope resolved incorrectly due to mismatched `end` labels.    - **Constraint**: Ensures `end` pseudo-instruction validates enclosing blocks accurately.    - **Relation to Branch Target Resolution**: Validates if branch target resolution is consistent with the structured control end label evaluations.

(assert_invalid
  (module
    (func (result i32)
      (block (i32.const 1)
        (if (result i32)
          (then (br 1))
          (else (i32.const 0))
        )
      )
      (drop)
    )
  )
  "type mismatch"
)